--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'  # Adjust to 3.13 if needed
+        python-version: '3.13'
     - name: Install Poetry
       run: curl -sSL https://install.python-poetry.org | python3 -
     - name: Install dependencies
