--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,14 @@ license = {text = "GPL-3.0"}
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "mesa[rec] (>=3.3.0,<4.0.0)",
+    "mesa (>=3.3.0,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "jupyter (>=1.1.1,<2.0.0)"
 ]
 
+[[tool.poetry.packages]]
+include = "asimov"
+from = "src"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
