Added Multilevel Mesa for heirarchies. Updated pyproject & lock.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ requires-python = ">=3.13"
 dependencies = [
     "mesa (>=3.3.0,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "jupyter (>=1.1.1,<2.0.0)"
+    "jupyter (>=1.1.1,<2.0.0)",
+    "multilevel-mesa @ git+https://github.com/tpike3/multilevel_mesa.git"
 ]
 
 [tool.poetry]
