reconstructed entire virtual env to test CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
+pythonpath = src/
+testpaths = tests
+python_files = test_*.py
+norecursedirs = .git venv
 filterwarnings =
     ignore:`is_in` with a collection of the same datatype is ambiguous and deprecated\.:DeprecationWarning
