added src to ci file for ci testing.

--- a/.github/workflows/mvp-build-and-test.yml
+++ b/.github/workflows/mvp-build-and-test.yml
@@ -30,5 +30,8 @@ jobs:
       - name: Install asimov package
         run: poetry run pip install -e .
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$PWD/src" >> $GITHUB_ENV
+
       - name: Run tests
         run: poetry run pytest
