--- a/.github/workflows/mvp-build-and-test.yml
+++ b/.github/workflows/mvp-build-and-test.yml
@@ -30,5 +30,10 @@ jobs:
       - name: Install asimov package
         run: poetry run pip install -e .
 
+      - name: Debug path
+        run: |
+          poetry run python -c "import sys; print('\n'.join(sys.path))"
+          ls -la src/asimov/agents/network/
+
       - name: Run tests  # <-- UPDATED: Explicit PYTHONPATH here
         run: PYTHONPATH=$PWD/src poetry run pytest
