--- a/.github/workflows/mvp-build-and-test.yml
+++ b/.github/workflows/mvp-build-and-test.yml
@@ -34,6 +34,10 @@ jobs:
         run: |
           poetry run python -c "import sys; print('\n'.join(sys.path))"
           ls -la src/asimov/agents/network/
+          ls -la src/asimov/agents/requests/
+          ls -la tests/asimov/agents/network/
+          ls -la tests/asimov/agents/requests/
+          ls -la tests/asimov/
 
       - name: Run tests  # <-- UPDATED: Explicit PYTHONPATH here
         run: PYTHONPATH=$PWD/src poetry run pytest
