--- a/.github/workflows/mvp-build-and-test.yml
+++ b/.github/workflows/mvp-build-and-test.yml
@@ -35,9 +35,21 @@ jobs:
           poetry run python -c "import sys; print('\n'.join(sys.path))"
           ls -la src/asimov/agents/network/
           ls -la src/asimov/agents/requests/
-          ls -la tests/asimov/agents/network/
+          ls -la tests/asimov/agents/network/pytest --cov --cov-branch --cov-report=xml
           ls -la tests/asimov/agents/requests/
           ls -la tests/asimov/
 
-      - name: Run tests  # <-- UPDATED: Explicit PYTHONPATH here
-        run: PYTHONPATH=$PWD/src poetry run pytest
+      - name: Run tests
+        env:
+          PYTHONPATH: ${{ github.workspace }}/src
+        run: |
+          mkdir -p coverage-reports  # Creates dir if needed
+          poetry run pytest --cov=src/asimov --cov-report=xml:coverage-reports/coverage.xml
+      
+        #  - name: Run tests  # <-- UPDATED: Explicit PYTHONPATH here
+        #run: PYTHONPATH=$PWD/src poetry run pytest
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}  
