--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = ">=8.4.2,<9.0.0"
 pytest-cov = ">=7.0.0,<8.0.0"
 black = ">=25.9.0,<26.0.0"
 flake8 = ">=7.3.0,<8.0.0"
+codecov = "^2.1.13"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
