--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,7 @@ codecov = "^2.1.13"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.coverage.run]
+data_file = "coverage-reports/.coverage"
+branch = true  # Optional: Tracks if/else branches for better metrics
