--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ python = ">=3.13"
 mesa = ">=3.3.0,<4.0.0"
 seaborn = ">=0.13.2,<0.14.0"
 jupyter = ">=1.1.1,<2.0.0"
-mesa-frames = "0.1.0a0"  # Pin to specific pre-release version
+mesa-frames = { git = "https://github.com/projectmesa/mesa-frames.git" }
 polars = ">=1.34.0,<2.0.0"
+beartype = "^0.22.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.4.2,<9.0.0"
