--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 pythonpath = src/
 testpaths = tests
+addopts = -s -vvv
 python_files = test_*.py
 norecursedirs = .git venv
 filterwarnings =
