--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,8 @@ build-backend = "poetry.core.masonry.api"
 [tool.coverage.run]
 data_file = "coverage-reports/.coverage"
 branch = true  # Optional: Tracks if/else branches for better metrics
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src"]
+addopts = "-s -v"
